# OrthoRoute-Metal

./: .flake8  .gitignore  CHANGELOG.md  HANDOFF.md  NOTICE.md  README.md  ROADMAP.md  main.py  pyproject.toml  pytest.ini  release_notes.md
ci/: Dockerfile  README.md  run.sh
docs/: ARCHITECTURE.md  BENCHMARK_METHODOLOGY.md  INTEGRATION_LESSONS.md  api_reference.md  cloud_gpu_setup.md  contributing.md  coordinate_system.md  metal_kernel_internals.md  pathfinder_algorithm.md
f5_turbo_generator/: README.md  components.py  f5_turbo_v2.kicad_pcb  f5_turbo_v2.net  generate_netlists.py  generate_netlists_sklib.py  orthoroute.json  place_f5_turbo.py
f5_turbo_generator/cmd/: place_f5_turbo.go
metal/: Cargo.toml  mock_orthoroute.py
metal/src/: accelerate_ops.rs  kernels.metal  lib.rs
orthoroute/algorithms/manhattan/: board_analyzer.py  layer_analyzer.py  parameter_derivation.py  unified_pathfinder.py
orthoroute/algorithms/manhattan/pathfinder/: __init__.py  config.py  constants.py  convergence_manager.py  data_structures.py  edge_accountant.py  geometry_emitter.py  (+2 more)
orthoroute/domain/models/: board.py  constraints.py  routing.py
orthoroute/domain/services/: drc_checker.py
orthoroute/infrastructure/gpu/: __init__.py  cpu_fallback.py  metal_provider.py  vulkan_provider.py
orthoroute/infrastructure/kicad/: file_parser.py
orthoroute/presentation/gui/: main_window.py
tests/: conftest.py  test_benchmarks.py  test_board_analyzer.py  test_config.py  test_convergence.py  test_cpu_fallback.py  test_csr_graph.py  test_data_structures.py  test_domain_models.py  test_drc_checker.py  test_gpu_cpu_parity.py  test_gpu_cpu_parity_advanced.py  test_grid.py  test_kicad_e2e.py  test_kicad_file_parser.py  test_kicad_geometry.py  test_kicad_layers.py  test_kicad_serialization.py  test_lattice.py  test_layer_analyzer.py  test_pad_mapping.py  test_pad_mapping_advanced.py  test_parameter_derivation.py  test_pathfinder_convergence.py  test_performance.py  test_portal_escape.py  test_portal_escape_advanced.py  test_real_global_grid.py  test_regression.py  test_serialization.py  test_spatial_hash.py  test_via_accounting.py
vulkan/: Cargo.toml  README.md
vulkan/src/: lib.rs
vulkan/src/shaders/: README.md
